[project]
name = "liquidation-sentinel"
version = "0.1.0"
description = "Morpho Blue liquidation monitor and Telegram bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.1",
  "requests>=2.31.0",
  "typer>=0.12.3",
  "web3>=6.15.1",
]

[project.scripts]
liquidation-sentinel = "liquidation_sentinel.cli:app"

[tool.typer]
pretty_exceptions_show_locals = false
